@@ -7,6 +7,7 @@ Diakonos Changelog
 - Added go_to_char_previous (Alt-P).
 - shell command now shows executed command on interaction line.
 - shell command is now interruptable.
+- Klipper synchronization now a single setting (clipboard.external klipper).
 
 0.8.9
 
